--- a/index.ipynb
+++ b/index.ipynb
@@ -108,7 +108,7 @@
     "# Get this from the \"Manage App\" page. Make sure you set them\n",
     "# back to None before pushing this to GitHub, since otherwise\n",
     "# your credentials will be compromised\n",
-    "api_key = \"Ovs6ZGQXmGpKC0JnjEDREbjq5W9exnA498P0DnbJzwCdWPWsyyGkF2kUI-TWIMbyF6rKR_WCbWxw_ICKA85xiJq5F-un8ylC5wX026TF9Cpurid41ZJTCErjsVNzY3Yx\"\n",
+    "api_key = None\n",
     "\n",
     "# These can be whatever you want! But the solution uses \"pizza\"\n",
     "# and \"New York NY\" if you want to compare your work directly\n",
